# eusebian-canons

./: CNAME  Errors.md  README.md  graphs.js  import.sql  index.html  redo-json.js
assets/: canon-types.ts
data/: JHN-sections-aligned.txt  JHN-sections-automatic.txt  JHN-sections.txt  LUK-sections-aligned.txt  LUK-sections-automatic.txt  LUK-sections.txt  MAT-sections-aligned.txt  MAT-sections-automatic.txt  MAT-sections.txt  MRK-sections-aligned.txt  MRK-sections-automatic.txt  MRK-sections.txt  Sections.xlsx  canon-1.txt  canon-10.txt  canon-11.txt  canon-12.txt  canon-13.txt  canon-2.txt  canon-3.txt  canon-4.txt  canon-5.txt  canon-6.txt  canon-7.txt  canon-8.txt  canon-9.txt
graphviz/: graph.dot
json/: canon10.json  canon12.json  canon13.json  canon4.json  canon5.json  canon6.json  canon7.json  canon8.json  canon9.json  canons.json  canonsByGospel.json  sections-sql.json  sections.json
references/: CMakeLists.txt  main.cpp
sql/: eusebian-canons.db
viewer/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
viewer/src/: index.html
viewer/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts  canon-service.spec.ts  canon-service.ts
viewer/src/app/canon-component/: canon-component.spec.ts  canon-component.ts
viewer/src/app/canon-table-display-component/: canon-table-display-component.html  canon-table-display-component.scss  canon-table-display-component.spec.ts  canon-table-display-component.ts
viewer/src/app/gospel-component/: gospel-component.html  gospel-component.spec.ts  (+1 more)
(+7 files in other folders)
